[gd_scene load_steps=40 format=3 uid="uid://dy2jg0e1iws2m"]

[ext_resource type="Script" path="res://Screens/Battle/Battle.gd" id="1_nfufl"]
[ext_resource type="PackedScene" uid="uid://3m1eme6n2wed" path="res://Screens/Battle/CharacterList.tscn" id="2_6wey6"]
[ext_resource type="PackedScene" uid="uid://diu2xhfofh1m1" path="res://Screens/Battle/camera_2d.tscn" id="2_rnoma"]
[ext_resource type="Script" path="res://Screens/Battle/Battle_Prep.gd" id="2_t55sd"]
[ext_resource type="PackedScene" uid="uid://b7wt1gpod4rjo" path="res://Screens/Battle/Battle_TurnEval.tscn" id="3_uathk"]
[ext_resource type="TileSet" uid="uid://bim62kb8y75qx" path="res://Screens/Battle/terrainfyuckingsavethisshit.tres" id="3_vfrdl"]
[ext_resource type="PackedScene" uid="uid://b2dwrqycqblmj" path="res://Screens/Battle/map/UnitPath.tscn" id="4_4ux0f"]
[ext_resource type="PackedScene" uid="uid://duq8g22qdgw1a" path="res://Screens/Battle/map/SpriteObject.tscn" id="5_773tr"]
[ext_resource type="Texture2D" uid="uid://bcnpp5ccwkck" path="res://Screens/Battle/cursor.png" id="6_itebx"]
[ext_resource type="Texture2D" uid="uid://33ts5p2mx0ql" path="res://Screens/Battle/sprites/Fire2.png" id="7_0u6tm"]
[ext_resource type="Theme" uid="uid://wlic4ks3f85i" path="res://Screens/Battle/theme.tres" id="8_b0ewm"]
[ext_resource type="FontFile" uid="uid://ba16ggoccu0bx" path="res://sylfaen.ttf" id="9_j1ncc"]

[sub_resource type="GDScript" id="GDScript_nspcd"]
script/source = "extends StateMachine

func transition_to(new_state: String, kwargs:={}) -> void:
	$Label.text = \"State: \" + new_state
	super.transition_to(new_state, kwargs)
"

[sub_resource type="GDScript" id="GDScript_wxbqf"]
script/source = "extends State

# Idle state

# we're just waiting for the load_map signal
func enter(kwargs:={}):
	print(\"enter idle\")

func exit():
	state_machine.grab_focus()
"

[sub_resource type="GDScript" id="GDScript_52mns"]
script/source = "extends State

# Init state

var battle: Battle


func enter(kwargs := {}) -> void:
	print(\"enter init\")
	battle = kwargs.battle
	
	# initialize context
	var context = Battle.Context.new()
	context.attacker = kwargs.attacker
	context.defender = kwargs.defender
	context.territory = kwargs.territory
	context.result = Battle.Result.Cancelled
	context.turns = 0
	context.current_turn = context.attacker
	
	battle.context = context
	
	# load territory map
	battle.load_map(\"res://Screens/Battle/maps/StartingZone.tscn\")
	
	# emit signal
	battle.battle_started.emit(context.attacker, context.defender, context.territory)
	
	# if defender is ai, allow them to set first
	var prep_queue := []
	if !context.defender.is_player_owned() and context.attacker.is_player_owned():
		prep_queue.append(context.defender)
		prep_queue.append(context.attacker)
	else:
		prep_queue.append(context.attacker)
		prep_queue.append(context.defender)
	
	#$Node2D.visible = true
	$Node2D/Label.text = \"%s vs %s\" % [context.attacker.leader.name, context.defender.leader.name]
	
	# start prep phase
	state_machine.transition_to(\"Prep\", {battle=battle, prep_queue=prep_queue})
"

[sub_resource type="LabelSettings" id="LabelSettings_c22gi"]
font_size = 30

[sub_resource type="GDScript" id="GDScript_t4niq"]
script/source = "extends State

# PlayerAction state

func enter(kwargs:={}):
	print(\"enter player action\")
"

[sub_resource type="GDScript" id="GDScript_nu43r"]
script/source = "extends State

# AIAction state

func enter(kwargs:={}):
	print(\"enter ai action\")
"

[sub_resource type="GDScript" id="GDScript_gihxl"]
script/source = "extends State

# End state

func enter(kwargs:={}):
	print(\"enter end\")

func exit():
	state_machine.release_focus()
"

[sub_resource type="AtlasTexture" id="AtlasTexture_yxo64"]
atlas = ExtResource("7_0u6tm")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu3je"]
atlas = ExtResource("7_0u6tm")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_scqe4"]
atlas = ExtResource("7_0u6tm")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_w78rl"]
atlas = ExtResource("7_0u6tm")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct87q"]
atlas = ExtResource("7_0u6tm")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yx4vd"]
atlas = ExtResource("7_0u6tm")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ov5f7"]
atlas = ExtResource("7_0u6tm")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_i564b"]
atlas = ExtResource("7_0u6tm")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftog0"]
atlas = ExtResource("7_0u6tm")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbwm4"]
atlas = ExtResource("7_0u6tm")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlqwc"]
atlas = ExtResource("7_0u6tm")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qgvj"]
atlas = ExtResource("7_0u6tm")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d7hp"]
atlas = ExtResource("7_0u6tm")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnuru"]
atlas = ExtResource("7_0u6tm")
region = Rect2(576, 384, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_tj8df"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxo64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu3je")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scqe4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w78rl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct87q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yx4vd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ov5f7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i564b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftog0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbwm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlqwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qgvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d7hp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnuru")
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_6nd0a"]
font_size = 30

[sub_resource type="InputEventKey" id="InputEventKey_4apw1"]
device = -1
keycode = 4194305

[sub_resource type="InputEventMouseButton" id="InputEventMouseButton_p1kbt"]
button_mask = 2
position = Vector2(308, 19)
global_position = Vector2(312, 62)
button_index = 2
pressed = true

[sub_resource type="Shortcut" id="Shortcut_8j76h"]
events = [SubResource("InputEventKey_4apw1"), SubResource("InputEventMouseButton_p1kbt")]

[sub_resource type="LabelSettings" id="LabelSettings_vxtxp"]
font = ExtResource("9_j1ncc")
font_size = 22
font_color = Color(0, 0, 0, 1)

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_nfufl")

[node name="Drivers" type="Node" parent="."]

[node name="States" type="Control" parent="."]
process_priority = -1
z_index = 1
layout_mode = 3
anchors_preset = 0
focus_mode = 2
mouse_filter = 1
script = SubResource("GDScript_nspcd")
initial_state = NodePath("Idle")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="States"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "State: %s"

[node name="Idle" type="Node2D" parent="States"]
script = SubResource("GDScript_wxbqf")

[node name="Init" type="Node2D" parent="States"]
script = SubResource("GDScript_52mns")

[node name="Node2D" type="Node2D" parent="States/Init"]
visible = false

[node name="Label" type="Label" parent="States/Init/Node2D"]
offset_left = 58.0
offset_top = 34.0
offset_right = 187.0
offset_bottom = 79.0
size_flags_horizontal = 4
text = "%s vs %s"
label_settings = SubResource("LabelSettings_c22gi")

[node name="Prep" type="Node2D" parent="States"]
script = ExtResource("2_t55sd")

[node name="UI" type="Node2D" parent="States/Prep"]

[node name="Prep" type="Label" parent="States/Prep/UI"]
offset_left = 58.0
offset_top = 79.0
offset_right = 158.0
offset_bottom = 105.0
text = "Prep: %s"

[node name="TurnEval" parent="States" instance=ExtResource("3_uathk")]

[node name="PlayerAction" type="Node2D" parent="States"]
script = SubResource("GDScript_t4niq")

[node name="AIAction" type="Node2D" parent="States"]
script = SubResource("GDScript_nu43r")

[node name="End" type="Node2D" parent="States"]
script = SubResource("GDScript_gihxl")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Viewport" type="SubViewport" parent="SubViewportContainer"]
disable_3d = true
handle_input_locally = false
canvas_cull_mask = 4294966783
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="TerrainOverlay" type="TileMap" parent="SubViewportContainer/Viewport"]
z_index = -1
position = Vector2(1011.36, 210.367)
rotation = 0.522586
scale = Vector2(1.04234, 1.04234)
skew = 0.525625
tile_set = ExtResource("3_vfrdl")
format = 2

[node name="UnitPath" parent="SubViewportContainer/Viewport" instance=ExtResource("4_4ux0f")]
z_index = -1
position = Vector2(1011.36, 210.367)
rotation = 0.522586
scale = Vector2(1.04234, 1.04234)
skew = 0.525625

[node name="Camera2D" parent="." instance=ExtResource("2_rnoma")]
position = Vector2(960, 540)
drag_left_margin = 0.8
drag_top_margin = 0.44
drag_right_margin = 0.8
drag_bottom_margin = 0.44
metadata/follow_func = Callable()
metadata/target = Object(Node2D,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":-1,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"position":Vector2(1011.36, 247.987),"rotation":0.0,"scale":Vector2(1, 1),"skew":0.0,"script":Resource("res://Screens/Battle/map/SpriteObject.gd"),"texture":ExtResource("6_itebx"),"fit_to_grid":true,"sprite":Object(Sprite2D,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"position":Vector2(0, 0),"rotation":0.522585,"scale":Vector2(0.651461, 0.651461),"skew":0.525625,"texture":ExtResource("6_itebx"),"centered":true,"offset":Vector2(0, 0),"flip_h":false,"flip_v":false,"hframes":1,"vframes":1,"frame":0,"region_enabled":false,"region_rect":Rect2(0, 0, 0, 0),"region_filter_clip_enabled":false,"script":null)
,"display_name":"","display_icon":null,"world":Resource("res://Screens/Battle/data/World_StartingZone.tres"),"map_pos":Vector2(0, 0),"pathing":0,"no_show":false,"vertical_offset":-4.0)

metadata/battle_follow_func = Callable()

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tj8df")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Cursor" parent="UI" instance=ExtResource("5_773tr")]
z_index = -1
position = Vector2(0, -4)
texture = ExtResource("6_itebx")
fit_to_grid = true
vertical_offset = -4.0

[node name="CharacterList" parent="UI" instance=ExtResource("2_6wey6")]
visible = false
offset_left = 1427.0
offset_top = 112.0
offset_right = 1877.0
offset_bottom = 687.0

[node name="Label" type="Label" parent="UI"]
visible = false
offset_left = 146.0
offset_top = 738.0
offset_right = 186.0
offset_bottom = 761.0
text = "Tile: Tree1
x = %s
y = %s"
metadata/_edit_use_anchors_ = true

[node name="OnTurn" type="Label" parent="UI"]
visible = false
offset_left = 58.0
offset_top = 79.0
offset_right = 152.0
offset_bottom = 105.0
text = "on_turn: %s"

[node name="TurnNumber" type="Label" parent="UI"]
visible = false
offset_left = 37.0
offset_top = 34.0
offset_right = 77.0
offset_bottom = 57.0
text = "Turn %s"
label_settings = SubResource("LabelSettings_6nd0a")

[node name="DonePrep" type="Button" parent="UI"]
visible = false
custom_minimum_size = Vector2(0, 48)
offset_left = 1617.0
offset_top = 881.0
offset_right = 1844.0
offset_bottom = 952.0
focus_mode = 0
theme = ExtResource("8_b0ewm")
text = "Done"

[node name="CancelPrep" type="Button" parent="UI"]
visible = false
custom_minimum_size = Vector2(0, 48)
offset_left = 1684.0
offset_top = 815.0
offset_right = 1844.0
offset_bottom = 865.0
focus_mode = 0
theme = ExtResource("8_b0ewm")
shortcut = SubResource("Shortcut_8j76h")
text = "Cancel Battle"

[node name="WarningUI" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 673.0
offset_top = 395.0
offset_right = -673.0
offset_bottom = -395.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/WarningUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.859375, 0.828125, 0.773438, 1)

[node name="Label2" type="Label" parent="UI/WarningUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = 6.0
offset_right = 24.0
offset_bottom = 33.0
grow_horizontal = 2
text = "Error"
label_settings = SubResource("LabelSettings_vxtxp")

[node name="Label3" type="Label" parent="UI/WarningUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = 133.0
offset_right = 24.0
offset_bottom = 160.0
grow_horizontal = 2
text = "Error"
label_settings = SubResource("LabelSettings_vxtxp")

[connection signal="attack_sequence_ended" from="." to="." method="_on_attack_sequence_ended"]
[connection signal="attack_sequence_started" from="." to="." method="_on_attack_sequence_started"]
[connection signal="battle_ended" from="." to="." method="_on_battle_ended"]
[connection signal="battle_started" from="." to="." method="_on_battle_started"]
[connection signal="attack_used" from="States/TurnEval" to="." method="_on_turn_eval_attack_used"]
[connection signal="unit_cancelled" from="UI/CharacterList" to="States/Prep" method="_on_character_list_unit_cancelled"]
[connection signal="unit_dragged" from="UI/CharacterList" to="States/Prep" method="_on_character_list_unit_dragged"]
[connection signal="unit_highlight_changed" from="UI/CharacterList" to="States/Prep" method="_on_character_list_unit_highlight_changed"]
[connection signal="unit_released" from="UI/CharacterList" to="States/Prep" method="_on_character_list_unit_released"]
[connection signal="unit_selected" from="UI/CharacterList" to="States/Prep" method="_on_character_list_unit_selected"]
[connection signal="pressed" from="UI/DonePrep" to="." method="_on_done_prep_pressed"]
[connection signal="pressed" from="UI/CancelPrep" to="." method="_on_undo_button_pressed"]
